tests/NormalTests/paczka1/fuzzy1/38976716.err
Error in line 2: XvjBLg S617 23,6
Error in line 10: lsg0E A745 41,3
Error in line 14: lsg0E A52 80,1
Error in line 37: A661 A661 88,13
